# api-talk

./: .gitignore  README.md  pyproject.toml
api_clients/: create_order.sh  customer_spend.sh  delete_order.sh  get_customer.sh  get_order.sh  get_order_item.sh  get_order_items.sh  list_customers.sh  list_order_items.sh  list_orders.sh  replace_order.sh  update_order_status.sh
data/: schema.sql  seed.sql
queries/: create_order.sql  customer_spend.sql  delete_order.sql  get_customer.sql  get_order.sql  get_order_item.sql  get_order_items.sql  list_customers.sql  list_order_items.sql  list_order_items_by_order.sql  list_orders.sql  list_orders_by_status.sql  replace_order.sql  update_order_status.sql
scripts/: create_order.py  customer_spend.py  delete_order.py  get_customer.py  get_order.py  get_order_item.py  get_order_items.py  list_customers.py  list_order_items.py  list_orders.py  replace_order.py  setup_data.py  update_order_status.py
src/api_talk/: __init__.py  api.py  db.py  queries.py  setup.py  ui.py
